# supervisor-rust-port

./: .devcontainer-setup.sh  .devcontainer.Dockerfile  .devcontainer.json  .env  .env.example  .gitignore  Cargo.toml  Cross.toml  Dockerfile  README.md  TODO.md  TODO.txt  compose.yml  entrypoint.sh  notes  supervisor-local-start.sh
ai translations/: wasm.rs  wasm_utils.rs  wasmtime.rs
cross/: cross.aarch64.Dockerfile  cross.armv6.Dockerfile  cross.armv7.Dockerfile
pulley32/: Cargo.toml  compile_modules.sh
pulley32/src/: main.rs
src/: lib.rs  main.rs
src/api/: deployment.rs  device.rs  results.rs  run.rs
src/lib/: api.rs  configuration.rs  constants.rs  deployment.rs  general_utils.rs  logging.rs  utils.rs  wasmtime.rs  wasmtime_imports.rs  zeroconf.rs
src/structs/: deployment_orchestrator.rs  deployment_supervisor.rs  device.rs  module_orchestrator.rs  openapi.rs  request_entry.rs
supervisor/: Cargo.toml  Dockerfile  compose.yml
supervisor/src/: lib.rs  main.rs
supervisor/src/lib/: wasm3.rs  wasm_api.rs  wasm_api_tests.rs  wasm_tests.rs  wasm_utils.rs  wasm_utils_tests.rs  wasmtime.rs
supervisor/tests/: _wasm_test.rs  simple.wat  tests.rs
supervisor_arm32/: Cargo.toml
supervisor_arm32/src/: main.rs
supervisor_arm32_serializer/: README.md
supervisor_lib/: Cargo.toml
supervisor_lib/src/: lib.rs
supervisor_lib/src/lib/: deployment.rs  wasmtime.rs  wasmtime_imports.rs
tests/: api_tests.rs  camera.wasm  orchestrator_tests.rs  tests.rs
wasm-test/: Cargo.toml
wasm-test/src/: main.rs
webapp/: .env  Cargo.toml  Dockerfile  compose.yml
webapp/src/: main.rs
