[workspace]
resolver = "2"

[package]
name = "supervisor"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.1"
actix-files = "0.6.6"
actix-multipart = "0.6"
actix-web = { version = "4", optional = true, default-features = false }
anyhow = "1"
chrono = { version = "0.4.39", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11"
futures-util = "0.3"
hex = "0.4.3"
image = "0.25.6"
indexmap = "2.9.0"
lazy_static = "1.5.0"
local-ip-address = "0.6.3"
log = "0.4"
nokhwa = {version = "0.10.0", features = ["input-native", "output-wgpu"]}
once_cell = "1.20"
openssl = { version = "0.10", features = ["vendored"] }
rand = "0.9.0"
reqwest = { version = "0.12", features = ["json", "blocking", "multipart"] }
sanitize-filename = "0.6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7.1"
sha2 = "0.10.8"
strum = "0.27"
strum_macros = "0.27"
sysinfo = "0.33.1"
thiserror = "2"
tokio = { version = "1", optional = true, default-features = false }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
wasmtime = { version = "31.0.0", optional = true, default-features = false }
wasmtime-wasi = { version = "31.0.0", optional = true, default-features = false }
zeroconf = "0.15.1"

[features]

default = [
    "actix-web/default",
    "tokio/default",
    "wasmtime/default",
    "wasmtime/async",
    "wasmtime-wasi/default"
]

armv6 = [
    "actix-web/default",
    "tokio/default",
    "wasmtime/pulley",
    "wasmtime/runtime",
    "wasmtime/std",
    "wasmtime/gc",
    "wasmtime/gc-drc",
    "wasmtime/component-model"
]

[profile.release]
strip = true
