[workspace]
resolver = "2"

[package]
name = "supervisor"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.1"
actix-files = "0.6.6"
actix-multipart = "0.6"
actix-web = { version = "4", optional = true, default-features = false }
anyhow = "1"
chrono = { version = "0.4.39", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11"
futures-util = "0.3"
hex = "0.4.3"
image = "0.25.6"
indexmap = "2.9.0"
local-ip-address = "0.6.3"
log = "0.4"
mongodb = "3.3.0"
nokhwa = {version = "0.10.0", features = ["input-native", "output-wgpu"]}
once_cell = "1.20"
openssl = { version = "0.10", features = ["vendored"] }
parking_lot = "0.12"
reqwest = { version = "0.12", features = ["json", "blocking", "multipart"] }
sanitize-filename = "0.6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7.1"
sha2 = "0.10.8"
strum = "0.27"
strum_macros = "0.27"
sysinfo = "0.35.1"
thiserror = "2.0.12"
thiserror-impl = "2.0.12"
tokio = { version = "1", optional = true, default-features = false }
tracing = "0.1.41"
tracing-attributes = "0.1.28"
wasmtime = { version = "31.0.0", optional = true, default-features = false }
wasmtime-wasi = { version = "31.0.0", optional = true, default-features = false }
zeroconf = "0.15.1"

[features]

default = [
    "actix-web/default",
    "tokio/default",
    "wasmtime/default",
    "wasmtime/async",
    "wasmtime-wasi/default"
]

armv6 = [
    "actix-web/default",
    "tokio/default",
    "wasmtime/pulley",
    "wasmtime/runtime",
    "wasmtime/std",
    "wasmtime/gc",
    "wasmtime/gc-drc",
    "wasmtime/component-model"
]

[profile.release]
strip = true


# [workspace.metadata.cross.target.armv7-unknown-linux-gnueabihf]
# pre-build = [
#     "apt-get update && apt-get install -y libavahi-client-dev libavahi-common-dev libdbus-1-dev clang libclang-dev llvm-dev pkg-config"
# ]