[package]
name = "webapp"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
libmdns = "0.7"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1"
env_logger = "0.9"
log = "0.4"
rand = "0.8.5"